--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/petrylabs/fcc-node-file-metadata#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "multer": "^1.4.5-lts.1"
   },
